# sams-cookiecutter-pypackage

./: flake.nix  pyproject.toml  test_cookiecutter.py
.github/workflows/: main.yaml
{{cookiecutter.repo_name}}/: flake.nix  pylintrc  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: main.yaml
