[tool.poetry]
name = "sams-cookiecutter-pypackage"
version = "0.2.0"
description = ""
authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/charmoniumQ/sams-cookiecutter-pypackage"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.pylint]
# Too long for inclusion here
# see pylintrc

[tool.mypy]
strict = true
pretty = true
error_summary = true
color_output = true
#mypy_path = stubs

[tool.poetry.dev-dependencies]
typer = "^0.12.3"
pylint = "^3.2.3"
mypy = "^1.10.0"
pytest = "^8.2.2"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = {git = "https://github.com/cookiecutter/cookiecutter.git"}

